gccida/g3/skip_escaped_newlines
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplex.c:636:35: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cppchar_t  skip_escaped_newlines( cpp_reader_0 *pfile) 
                                  ^~~~~~~~~~~~
                                  cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplex.c:638:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // rbx 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplex.c:641:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *v5; // rdx 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplex.c:673:6: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v9 = sch_istable[*( v7 - 1)]; 
     ^~~~~~~~~~~
     _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplex.c:712:7: error: use of undeclared identifier 'cpp_trigraph_map'; did you mean '_cpp_trigraph_map'?
v13 = cpp_trigraph_map[*( ( unsigned __int8 *)v5->cur + 1)]; 
      ^~~~~~~~~~~~~~~~
      _cpp_trigraph_map
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpphash.h:351:28: note: '_cpp_trigraph_map' declared here
extern const unsigned char _cpp_trigraph_map[UCHAR_MAX + 1];
                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpplex.c:737:6: error: use of undeclared identifier 'cpp_trigraph_map'; did you mean '_cpp_trigraph_map'?
v4 = cpp_trigraph_map[v17]; 
     ^~~~~~~~~~~~~~~~
     _cpp_trigraph_map
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/cpphash.h:351:28: note: '_cpp_trigraph_map' declared here
extern const unsigned char _cpp_trigraph_map[UCHAR_MAX + 1];
                           ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/skip_escaped_newlines/src/obj/cpplex.o] Error 1
